--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 2.9.1 for Java 7 projects -->
+            <version>3.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
